--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ dependencies = [
     "deltalake>=0.25.4",
     "requests>=2.32.3",
     "cachetools>=5.5.2",
+    "semantic-link-labs",
+    "azure-storage-blob",
+    "polars",
+    "sqlalchemy",
+    "pyodbc",
+    "tabulate",
 ]
 
 [tool.setuptools]
